# pirrip

./: LICENSE  pirrip.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
templates/: base.html  package_detail.html  package_list.html
