[tool.poetry]
name = "pirrip"
version = "0.1.0"
description = "A python package repository with great expectations."
authors = ["Josh Ourisman <me@josho.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = { extras = ["standard"], version = "^0.14.0" }
requests = "^2.25.1"
Jinja2 = "^3.0.1"
pydantic = "^1.8.2"
rich = "^10.4.0"
faunadb = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
