[tool.poetry]
name = "pirrip"
version = "0.1.0"
description = "A python package repository with great expectations."
authors = ["Josh Ourisman <me@josho.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
uvicorn = { extras = ["standard"], version = "^0.17.0" }
requests = "^2.27.1"
Jinja2 = "^3.0.3"
pydantic = "^1.9.0"
rich = "^11.0.0"
faunadb = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
